compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/AnnotationModifiers.java
public final class A /* A*/ {
  @kotlin.jvm.Transient()
  @kotlin.jvm.Volatile()
  @org.jetbrains.annotations.NotNull()
  private transient volatile @org.jetbrains.annotations.NotNull() java.lang.String c = "" /* initializer type: java.lang.String */;

  @kotlin.jvm.Strictfp()
  @kotlin.jvm.Synchronized()
  public final synchronized strictfp void f();//  f()

  @org.jetbrains.annotations.NotNull()
  public final @org.jetbrains.annotations.NotNull() java.lang.String getC();//  getC()

  public  A();//  .ctor()

  public final void setC(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() java.lang.String);//  setC(@org.jetbrains.annotations.NotNull() java.lang.String)
}
